fix responsive on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1347,7 +1347,7 @@ svg {
   .order-section {
     background-color: white;
     width: 100%;
-    min-height: 40vh;
+    min-height: 60vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1388,9 +1388,10 @@ svg {
     color: black;
     font-size: 140%;
     width: 100%;
-    height: 130vh;
+    height: 140vh;
     padding: 0 5vw;
     margin-bottom: -15vh;
+    margin-top: -10vh;
     box-sizing: border-box;
     display: none;
     justify-content: space-around;
